--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
     <meta name="description" content="Create shareable links to teach people how to use ChatGPT" />
     <meta name="author" content="Let Me ChatGPT That For You" />
 
-    <meta property="og:title" content="861a5730-e29d-4dff-af16-1eb2d661b3d4" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <!-- If you use .ico instead, use: <link rel="icon" href="/favicon.ico" /> -->
+
+    <!-- Optional: Social meta tags (customize if you want) -->
+    <!--
+    <meta property="og:title" content="Let Me ChatGPT That For You" />
+    <meta property="og:description" content="Create shareable links to teach people how to use ChatGPT" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/opengraph-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@your_twitter" />
+    <meta name="twitter:image" content="/twitter-image.png" />
+    -->
   </head>
 
   <body>
