fix: favicon visible

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Let Me ChatGPT That For You</title>
-    <meta name="description" content="Create shareable links to teach people how to use ChatGPT" />
+    <meta name="description" content="Creates shareable links to teach people how to use ChatGPT" />
     <meta name="author" content="Let Me ChatGPT That For You" />
 
     <!-- Favicon -->
